--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,8 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "fstream": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "cstring": "cpp",
+        "iomanip": "cpp"
     }
 }
