--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ include_directories(${GLFW_INCLUDE_DIRS})
 
 include_directories(src/extern/stb_image)
 include_directories(src/extern/glm)
+include_directories(src/utils)
+include_directories(src/objects)
 
 include_directories(res)
 
@@ -20,6 +22,7 @@ src/extern/stb_image/stb_image.cpp
 src/viewer.cpp 
 src/controller.cpp 
 src/logic.cpp
+src/utils/Object.cpp
 src/utils/Renderer.cpp
 src/utils/VertexBuffer.cpp
 src/utils/IndexBuffer.cpp
@@ -27,11 +30,11 @@ src/utils/VertexBufferLayout.hpp
 src/utils/VertexArray.cpp
 src/utils/Shader.cpp
 src/utils/Texture.cpp
+src/utils/TextureManager.hpp
 src/objects/Piece.cpp
 src/objects/Square.cpp
 src/objects/Board.cpp
 src/objects/Move.hpp
-
 )
 
 target_compile_options(chess_AI PRIVATE -g)
