UnMake move and perft class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(src/extern/stb_image)
 include_directories(src/extern/glm)
 include_directories(src/utils)
 include_directories(src/objects)
+include_directories(src/chess)
 include_directories(res)
 
 add_executable(chess_AI 
@@ -21,7 +22,6 @@ src/extern/stb_image/stb_image.cpp
 src/viewer.cpp 
 src/controller.cpp 
 src/logic.cpp
-src/ChessEngine.cpp
 src/utils/Object.cpp
 src/utils/Renderer.cpp
 src/utils/VertexBuffer.cpp
@@ -38,6 +38,8 @@ src/objects/Square.cpp
 src/objects/Board.cpp
 src/objects/Move.cpp
 src/objects/PieceType.hpp
+src/chess/ChessEngine.cpp
+src/chess/Perft.cpp
 )
 
 target_compile_options(chess_AI PRIVATE -g)
