--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ src/objects/Square.cpp
 src/objects/Board.cpp
 src/objects/Move.cpp
 src/objects/PieceType.hpp
+src/objects/PromotionSelector.hpp
 src/chess/ChessEngine.cpp
 src/chess/Perft.cpp
 )
