--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(chess_AI
 src/main.cpp
 src/extern/stb_image/stb_image.cpp
 src/viewer.cpp 
+src/Controller.cpp 
 src/utils/Object.cpp
 src/utils/Renderer.cpp
 src/utils/VertexBuffer.cpp
