--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,9 +49,10 @@ src/chess/MoveGenerator.cpp
 src/chess/Evaluator.cpp
 src/chess/ChessAI.cpp
 src/chess/Perft.cpp
+src/chess/MoveOrder.cpp
 src/actions/ActionController.cpp
 )
 
-target_compile_options(chess_AI PRIVATE -g)
+target_compile_options(chess_AI PRIVATE -O3)
 
 target_link_libraries(chess_AI ${OPENGL_LIBRARIES} GLEW::GLEW glfw)
